Fixed schedule shifted to left on mobile view

--- a/client/src/components/schedule/ScheduleHome/ScheduleHome.scss
+++ b/client/src/components/schedule/ScheduleHome/ScheduleHome.scss
@@ -56,7 +56,7 @@
   justify-content: center;
   align-items: left;
   margin-left: -60px;
-  margin-right: -50px;
+  margin-right: -190px;
   flex-direction: column;
   height: 930px;
 }
@@ -69,7 +69,6 @@
   flex: 0.5;
   display: flex;
   align-items: left;
-  margin-left: -10%;
   flex-direction: column;
 }
 
